<resources>
    <string name="app_name">Herbify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Beranda</string>
    <string name="me">Profil</string>
    <string name="search">cari</string>
    <string name="camera_button">Camera Button</string>
    <string name="logo">Logo</string>
    <string name="next">Lanjut</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="by_herblabs_ai">oleh Herblabs.ai</string>
    <string name="sign_in">Masuk</string>
    <string name="title_activity_maps">Map</string>
    <string name="image_result">Hasil Foto</string>
    <string name="back_button">Back Button</string>
    <string name="identified_as">Diidentifikasi Sebagai</string>
    <string name="no_match">Tidak Cocok ?</string>
    <string name="image">Image</string>
    <string name="top_recipe">Resep Populer</string>
    <string name="history">Riwayat</string>
    <string name="herbs">Tanaman Herbal</string>
    <string name="recipe">Resep</string>
    <string name="benefits">Manfaat</string>
    <string name="dosage">Dosis</string>
    <string name="ingredients">Bahan - Bahan</string>
    <string name="step">Langkah - Langkah</string>
    <string name="credit"><u>Sumber</u></string>
    <string name="example_number">1</string>
    <string name="example_confident">90</string>
    <string name="example_confident2">100</string>
    <string name="example_confident3">0.5</string>
    <string name="percent">%</string>
    <string name="example_step">Siapkan bahan. Geprek Jahe. Larutkan gula merah.</string>
    <string name="loading">Tunggu sebentar …</string>
    <string name="title_feedback">Beri Masukan ?</string>
    <string name="ok">Kirim</string>
    <string name="settings">pengaturan</string>
    <string name="tidak_ada_riwayat">Tidak ada riwayat</string>
    <string name="delete">Hapus</string>
    <string name="logout">Keluar</string>
</resources>