<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_people_searching"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/source_sans_pro"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/source_sans_pro"
            android:gravity="center"
            android:text="@string/description"
            android:textSize="14sp"
            android:textColor="@color/gray400"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:maxLines="2"/>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>