<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@color/white"
    android:layout_marginTop="16dp"
    card_view:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/card_for_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="0dp">
            <ImageView
                android:id="@+id/img_recipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@color/teal_200"
                android:contentDescription="@string/image"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/card_for_image"
            android:text="@string/title"
            android:fontFamily="@font/source_sans_pro"
            android:textColor="@color/gray400"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/card_for_image"
            android:layout_below="@id/tv_title"
            android:text="@string/description"
            android:fontFamily="@font/source_sans_pro"
            android:textSize="12sp"
            android:textColor="@color/gray400"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="3"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>